fixed alignment

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@
 body {
   background-color: var(--Very-dark-blue);
   margin: 0;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
